samples/_failures_safe/1761620341_8c715b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42d72db1.c: In function ‘main’:
./samples/SAFE/__tmp_42d72db1.c:165:9: error: expected declaration or statement at end of input
  165 |         free(tokens);
      |         ^~~~
./samples/SAFE/__tmp_42d72db1.c:165:9: error: expected declaration or statement at end of input
